<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customWhile"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/whileField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_if_field"
        android:contentDescription="@string/while_back" />

    <TextView
        android:id="@+id/whileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/until"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/whileField"
        app:layout_constraintStart_toStartOf="@+id/whileField"
        app:layout_constraintTop_toTopOf="@+id/whileField" />

    <ImageView
        android:id="@+id/whileCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/whileField"
        app:layout_constraintEnd_toEndOf="@+id/whileField"
        app:layout_constraintStart_toEndOf="@+id/whileText"
        app:layout_constraintTop_toTopOf="@+id/whileField"
        app:srcCompat="@drawable/ic_if_condition"
        android:contentDescription="@string/condition_field" />

    <EditText
        android:id="@+id/editCondition"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/condition"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/tintText"
        android:textColor="@color/visibleText"
        android:textSize="10sp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/whileCondition"
        app:layout_constraintEnd_toEndOf="@+id/whileCondition"
        app:layout_constraintStart_toStartOf="@+id/whileCondition"
        app:layout_constraintTop_toTopOf="@+id/whileCondition" />

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_button_add"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/whileField"
        app:layout_constraintTop_toTopOf="@+id/whileField"
        app:srcCompat="@drawable/ic_plus"
        android:contentDescription="@string/add" />


    <com.jmedeisis.draglinearlayout.DragLinearLayout
        android:id="@+id/addInIfField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whileField"
        android:layout_marginStart="32dp">
    </com.jmedeisis.draglinearlayout.DragLinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addInIfField"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/ic_end_if"
        android:contentDescription="@string/end" />

</merge>