<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customOutput"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/outputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_output_field"
        android:contentDescription="@string/output_back" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/outputField"
        app:layout_constraintStart_toStartOf="@+id/outputField"
        app:layout_constraintTop_toTopOf="@+id/outputField" />

    <ImageView
        android:id="@+id/fieldForElems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/outputField"
        app:layout_constraintEnd_toEndOf="@+id/outputField"
        app:layout_constraintStart_toEndOf="@+id/outputText"
        app:layout_constraintTop_toTopOf="@+id/outputField"
        app:srcCompat="@drawable/ic_output_elems"
        android:contentDescription="@string/output_field"/>

    <EditText
        android:id="@+id/outputElems"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/elems"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/tintText"
        android:textColor="@color/visibleText"
        android:textSize="10sp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/fieldForElems"
        app:layout_constraintEnd_toEndOf="@+id/fieldForElems"
        app:layout_constraintStart_toStartOf="@+id/fieldForElems"
        app:layout_constraintTop_toTopOf="@+id/fieldForElems" />


</merge>